--- a/css/rates.css
+++ b/css/rates.css
@@ -158,11 +158,92 @@
 .rates__title {
   margin-bottom: 80px;
 }
+@media screen and (max-width: 640px) and (max-width: 480px) {
+  .rates__title {
+    margin-bottom: 30px;
+  }
+}
 .rates__box {
   display: flex;
   flex-wrap: wrap;
   gap: 40px 20px;
   justify-content: center;
+}
+@media screen and (max-width: 768px) {
+  .rates__box {
+    display: none;
+  }
+}
+.rates__form {
+  margin-top: 70px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 35px;
+  align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .rates__form {
+    margin-top: 35px;
+    row-gap: 20px;
+  }
+}
+.rates__form-promo {
+  min-height: 60px;
+  max-width: 380px;
+  width: 100%;
+  border: 2px solid #7872B9;
+  outline: none;
+  padding: 19px 30px;
+  border: 2px solid #7872B9;
+  border-radius: 15px;
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  color: #7872B9;
+}
+.rates__form-promo::-moz-placeholder {
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 18px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  color: rgba(120, 114, 185, 0.6);
+}
+.rates__form-promo:-ms-input-placeholder {
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 18px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  color: rgba(120, 114, 185, 0.6);
+}
+.rates__form-promo::placeholder {
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 18px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  color: rgba(120, 114, 185, 0.6);
+}
+@media screen and (max-width: 480px) {
+  .rates__form-promo::-moz-placeholder {
+    font-size: 14;
+  }
+  .rates__form-promo:-ms-input-placeholder {
+    font-size: 14;
+  }
+  .rates__form-promo::placeholder {
+    font-size: 14;
+  }
+}
+@media screen and (max-width: 480px) {
+  .rates__form-promo {
+    padding: 13px 15px;
+    font-size: 18px;
+  }
+}
+.rates__form-send {
+  max-width: 380px;
+  width: 100%;
 }
 
 .item-rates {
@@ -174,11 +255,31 @@
   border-radius: 15px;
   min-height: 384px;
   flex: 0 0 280px;
+  padding: 0 0px 30px 0px;
+}
+@media screen and (max-width: 480px) {
+  .item-rates {
+    flex: 0 0 240px;
+    min-height: 362px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .item-rates {
+    flex: 0 0 200px;
+  }
 }
 .item-rates__header {
   background: #EBF5FF;
   min-height: 57px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 480px) {
+  .item-rates__header {
+    min-height: 52px;
+  }
 }
 .item-rates__title {
   font-family: var(--font-montserrat-norms-medium);
@@ -188,8 +289,155 @@
   color: #4D4D52;
   margin: auto 0;
 }
+@media screen and (max-width: 480px) {
+  .item-rates__title {
+    font-size: 16px;
+  }
+}
 .item-rates__content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   flex-grow: 1;
+  padding-top: 20px;
+}
+.item-rates__price {
+  font-family: var(--font-montserrat-norms-bold);
+  font-size: 24px;
+  line-height: 140%;
+  letter-spacing: 0.01em;
+  color: #7872B9;
+  max-width: 220px;
+  margin-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 480px) {
+  .item-rates__price {
+    font-size: 20px;
+  }
+}
+.item-rates__price span {
+  line-height: 140%;
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 20px;
+  letter-spacing: 0.01em;
+  color: #7872B9;
+}
+@media screen and (max-width: 480px) {
+  .item-rates__price span {
+    font-size: 18px;
+  }
+}
+.item-rates__pay {
+  border: none;
+  outline: none;
+  background: #7872B9;
+  border-radius: 10px;
+  min-height: 70px;
+  max-width: 220px;
+  width: 100%;
+  padding: 0 10px;
+  font-family: var(--font-montserrat-norms-semibold);
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-bottom: 20px;
+}
+.item-rates__pay:hover {
+  background: hsl(245deg, 62%, 75%);
+}
+@media screen and (max-width: 480px) {
+  .item-rates__pay {
+    font-size: 16px;
+    max-width: 180px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .item-rates__pay {
+    max-width: 150px;
+  }
+}
+.item-rates__payment {
+  border: none;
+  outline: none;
+  min-height: 50px;
+  width: 100%;
+  max-width: 220px;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #F1E6F7;
+  border-radius: 8px;
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #4D4D52;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.item-rates__payment:hover {
+  background: #dbcee2;
+}
+@media screen and (max-width: 480px) {
+  .item-rates__payment {
+    font-size: 16px;
+    max-width: 180px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .item-rates__payment {
+    font-size: 16px;
+    max-width: 150px;
+  }
+}
+.item-rates__benefit {
+  font-family: var(--font-montserrat-norms-medium);
+  font-size: 18px;
+  line-height: 140%;
+  color: #7872B9;
+}
+
+.rates-slider {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .rates-slider {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    position: relative;
+  }
+}
+.rates-slider .slick-list {
+  overflow: hidden;
+}
+.rates-slider .slick-track {
+  display: flex;
+  justify-content: space-around;
+}
+.rates-slider .slick-arrow {
+  position: absolute;
+  top: 0;
+  font-size: 0;
+  width: 20px;
+  height: 24px;
+  cursor: pointer;
+  top: 50%;
+  outline: none;
+  border: none;
+}
+.rates-slider .slick-prev {
+  left: -10px;
+  background: url(../img/rates/rates/left-arrow.png) center no-repeat;
+  z-index: 5;
+}
+.rates-slider .slick-next {
+  right: -10px;
+  background: url(../img/rates/rates/right-arrow.png) center no-repeat;
 }
