--- a/css/rates.css
+++ b/css/rates.css
@@ -637,3 +637,115 @@
     transform: translate(0, -35px);
   }
 }
+
+.programm {
+  padding: 0 0 120px 0;
+}
+@media screen and (max-width: 768px) {
+  .programm {
+    padding: 0 0 50px 0;
+  }
+}
+.programm__body {
+  text-align: center;
+}
+.programm__title {
+  margin-bottom: 83px;
+}
+@media screen and (max-width: 768px) {
+  .programm__title {
+    margin-bottom: 40px;
+  }
+}
+.programm__box {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .programm__box {
+    flex-direction: column;
+    row-gap: 60px;
+  }
+}
+.item-box {
+  flex: 0 1 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 15px;
+  position: relative;
+}
+@media screen and (max-width: 480px) {
+  .item-box {
+    flex: 0 0 auto;
+  }
+}
+.item-box:nth-child(2)::before, .item-box:nth-child(3)::before {
+  content: "";
+  position: absolute;
+  z-index: 5;
+  top: 23px;
+  left: -136px;
+  width: 138px;
+  height: 45px;
+}
+@media screen and (max-width: 992px) {
+  .item-box:nth-child(2)::before, .item-box:nth-child(3)::before {
+    left: -35%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .item-box:nth-child(2)::before, .item-box:nth-child(3)::before {
+    top: -50px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .item-box:nth-child(2)::before, .item-box:nth-child(3)::before {
+    width: 70px;
+    height: 70px;
+    top: -54px;
+  }
+}
+.item-box:nth-child(2)::before {
+  background: url(../img/rates/programm/arrow.png) center/cover no-repeat;
+}
+@media screen and (max-width: 768px) {
+  .item-box:nth-child(2)::before {
+    left: 20px;
+    transform: rotate(75deg);
+  }
+}
+.item-box:nth-child(3)::before {
+  background: url(../img/rates/programm/arrow-2.png) center/cover no-repeat;
+}
+@media screen and (max-width: 768px) {
+  .item-box:nth-child(3)::before {
+    left: calc(100% - 138px);
+    transform: rotate(103deg);
+  }
+}
+@media screen and (max-width: 480px) {
+  .item-box:nth-child(3)::before {
+    left: calc(100% - 100px);
+  }
+}
+.item-box__text {
+  max-width: 330px;
+}
+@media screen and (max-width: 480px) {
+  .item-box__text {
+    max-width: 250px;
+  }
+}
+.item-box img {
+  width: 100%;
+  height: auto;
+  max-width: 120px;
+}
+@media screen and (max-width: 480px) {
+  .item-box img {
+    max-width: 50px;
+  }
+}
