--- a/css/psychologists.css
+++ b/css/psychologists.css
@@ -143,3 +143,86 @@
     padding: 0 35px;
   }
 }
+
+.advantage {
+  padding: 100px 0 120px;
+  background: #F9FCFF;
+}
+@media screen and (max-width: 768px) {
+  .advantage {
+    padding: 50px 0;
+  }
+}
+.advantage__body {
+  text-align: center;
+}
+.advantage__title {
+  margin-bottom: 100px;
+}
+.advantage__box {
+  display: flex;
+  flex-direction: column;
+  row-gap: 180px;
+}
+@media screen and (max-width: 768px) {
+  .advantage__box {
+    row-gap: 110px;
+  }
+}
+.advantage__item:nth-child(odd) {
+  align-self: flex-start;
+}
+.advantage__item:nth-child(even) {
+  align-self: flex-end;
+}
+
+.item-advantage {
+  max-width: 820px;
+  width: 100%;
+  background: #FFFFFF;
+  border-radius: 20px;
+  position: relative;
+  padding: 140px 60px 80px 60px;
+  text-align: left;
+  box-shadow: 10px 15px 0 #CDE1FF;
+}
+@media screen and (max-width: 768px) {
+  .item-advantage {
+    padding: 80px 20px 30px 20px;
+    text-align: center;
+    box-shadow: 5px 10px 0 #CDE1FF;
+  }
+}
+.item-advantage__title {
+  font-family: var(--font-montserrat-norms-semibold);
+  font-size: 24px;
+  line-height: 140%;
+  margin-bottom: 10px;
+  letter-spacing: 0.01em;
+  color: #4D4D52;
+}
+@media screen and (max-width: 480px) {
+  .item-advantage__title {
+    font-size: 18px;
+  }
+}
+.item-advantage__text span {
+  color: #7872B9;
+}
+@media screen and (max-width: 480px) {
+  .item-advantage__text {
+    font-size: 18px;
+  }
+}
+.item-advantage img {
+  position: absolute;
+  top: -60px;
+  left: 60px;
+}
+@media screen and (max-width: 768px) {
+  .item-advantage img {
+    width: 120px;
+    height: 120px;
+    left: calc(50% - 60px);
+  }
+}
