--- a/scss/psychologists.scss
+++ b/scss/psychologists.scss
@@ -61,7 +61,6 @@
         }
     }
 }
-
 .content-meet {
 
     &__title {
@@ -130,3 +129,84 @@
     }
    
 }
+//advantage=============================================================
+.advantage {
+    padding: 100px 0 120px;
+    background: #F9FCFF;
+    @media screen and (max-width:768px){
+        padding: 50px 0;
+    }
+    &__body {
+        text-align: center;
+    }
+
+    &__title {
+        margin-bottom: 100px;
+        @media screen and (max-width:768px){
+            
+        }
+    }
+
+    &__box {
+        display: flex;
+        flex-direction: column;
+        row-gap: 180px;
+        @media screen and (max-width:768px){
+            row-gap: 110px;
+        }
+    }
+
+    &__item:nth-child(odd) {
+        align-self: flex-start;
+    }
+    &__item:nth-child(even) {
+        align-self: flex-end;
+    }
+}
+
+.item-advantage {
+    max-width: 820px;
+    width: 100%;
+    background: #FFFFFF;
+    border-radius: 20px;
+    position: relative;
+    padding: 140px 60px 80px 60px;
+    text-align: left;
+    box-shadow:10px 15px 0 #CDE1FF;
+    @media screen and (max-width:768px){
+        padding: 80px 20px 30px 20px;
+        text-align: center;
+        box-shadow:5px 10px 0 #CDE1FF;
+    }
+    &__title {
+        font-family: var(--font-montserrat-norms-semibold);
+        font-size: 24px;
+        line-height: 140%;
+        margin-bottom: 10px;
+        letter-spacing: 0.01em;
+        color: #4D4D52;
+        @media screen and (max-width:480px){
+            font-size: 18px;
+        }
+    }
+
+    &__text {
+        span{
+            color: #7872B9;;
+        }
+        @media screen and (max-width:480px){
+            font-size: 18px;
+        }
+    }
+    img{
+        position: absolute;
+        top: -60px;
+        left: 60px;
+        @media screen and (max-width:768px){
+            width: 120px;
+            height: 120px;
+            left: calc(50% - 60px);
+        }
+    }
+}
+
