--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,11 @@
     box-shadow: 5px 10px 0px #CDE1FF;
   }
 }
+@media screen and (max-width: 480px) {
+  .button {
+    min-height: 50px;
+  }
+}
 @media screen and (max-width: 360px) {
   .button {
     font-size: 16px;
