--- a/scss/psychologists.scss
+++ b/scss/psychologists.scss
@@ -682,15 +682,67 @@
     &__button{
         max-width: 390px;
         width: 100%;
-      
+        padding: 0 10px;
     }
-    
 }
-.container {
+//remain====================================================================
+.remain {
+    padding: 120px 0;
+    @media screen and (max-width:768px){
+        padding:60px 0;
+    }
+    &__body {
+        text-align: center;
+    }
+
+    &__box {
+
+    }
+
+    &__title {
+        margin-bottom: 15px;
+    }
+
+    &__text {
+        margin-bottom: 60px;
+        @media screen and (max-width:480px){
+            margin-bottom: 30px;
+        }
+    }
+
+    &__button {
+        border: none;
+        outline: none;
+        min-height: 70px;
+        width: 100%;
+        max-width: 360px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        background: none;
+        border: 2px solid #7872B9;
+        border-radius: 15px;
+        padding: 0 10px;
+        font-family: var(--font-montserrat-norms-bold);
+        font-size: 20px;
+        line-height: 100%;
+        letter-spacing: 0.02em;
+        color: #7872B9;
+        cursor: pointer;
+        transition: all 0.3s;
+        &:hover{
+            background: #F5F5F5;
+        }
+        &:active{
+            color: #fff;
+            background: #7872B9;
+        }
+        @media screen and (max-width:480px){
+            font-size: 16px;
+            min-height: 50px;
+        }
+    }
 }
-.title {
-}
-.text {
-}
-.button {
-}
+
+
+
