--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,6 +127,9 @@
     @media screen and (max-width:768px){
         box-shadow:5px 10px 0px #CDE1FF;
     }
+    @media screen and (max-width:480px){
+        min-height: 50px;
+    }
     @media screen and (max-width:360px){
         font-size: 16px;
     }
