--- a/scss/about-us.scss
+++ b/scss/about-us.scss
@@ -750,7 +750,7 @@
         display: block;
     }
     .slick-list{
-        //overflow: hidden;
+        overflow: hidden;
     }
     .slick-track{
         display: flex;
