--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -18,7 +18,9 @@
 .footer {
     padding: 80px 0;
     background: #F9FCFF;
-    
+    @media screen and (max-width:768px){
+        padding: 40px 0;
+    }
 }
 
 .footer-flex{
@@ -30,6 +32,12 @@
     @media screen and (max-width:1150px){
         column-gap: 0;
     }
+    @media screen and (max-width:600px){
+        justify-content: center;
+    }
+    @media screen and (max-width:360px){
+        justify-content:flex-start;
+    }
     &__wrapper{
         display: flex;
         flex-direction: column;
@@ -37,6 +45,9 @@
         @media screen and (max-width:1150px){
             order:-1;
             flex: 0 0 50%;
+        }
+        @media screen and (max-width:600px){
+            flex:0 0 auto;
         }
     }
     &__social {
@@ -55,7 +66,7 @@
             flex:0 1 50%;    
         }
     }
-    @media screen and (max-width:768px){
+    @media screen and (max-width:600px){
         &__email {
             flex:0 1 100%;
         }
@@ -69,11 +80,21 @@
     display: flex;
     flex-direction: column;
     row-gap: 21px;
-   
-    
-    &__item {
+    @media screen and (max-width:600px){
+        flex-direction: row;
+        justify-content: center;
+        column-gap: 20px;
     }
-
+    @media screen and (max-width:360px){
+        flex-direction: column;
+    }
+    &__item{
+        @media screen and (max-width:600px){
+            &:first-child{
+                padding-right: 10px;
+            }
+        }
+    }
     &__title {
         font-family: var(--font-montserrat-norms-regular);
         font-size: 14px;
@@ -100,30 +121,41 @@
         order: -1;
         flex:0 0 50%;
     }
-    @media screen and (max-width:768px){
+    @media screen and (max-width:600px){
         flex:0 0 100%;
 }
    &__list {
         display: flex;
         flex-wrap: wrap;
         row-gap: 24px;
-        justify-content: center;
-        @media screen and (max-width:768px){
+        justify-content: space-between;
+        @media screen and (max-width:540px){
             width: 100%;
-            max-width: 330px;
-           
+            max-width: 300px;
+            margin: 0 auto;
         }
-        
+        @media screen and (max-width:360px){
+            max-width: auto;
+            margin: 0 ;
+        }
     }
     &__item {
-        @media screen and (min-width:769px){
+        @media screen and (min-width:601px){
             &:nth-child(even){flex: 0 0 42%;}
             &:nth-child(odd){flex: 0 0 58%;}
         }
         @media screen and (max-width:768px){
-            &:nth-child(odd){padding-right: 10px;}
+            flex:0 0 33%;
+            padding-right: 10px;
         }
-        flex:0 50%;
+        @media screen and (max-width:540px){
+            flex:0 0 50%;
+            padding-right: 0;
+            &:nth-child(odd){
+                padding-right: 10px;
+            }
+        }
+        
     }
 
     &__link {
@@ -147,6 +179,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    @media screen and (max-width:600px){
+        text-align: center;
+    }
+    @media screen and (max-width:360px){
+        text-align: left;
+    }
     &__link {
         font-family: var(--font-montserrat-norms-regular);
         font-size: 14px;
