--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,9 +86,7 @@
     max-width: 1210px;
     padding: 0 15px;
     margin:0 auto;
-    @media screen and (max-width:768px){
-        padding: 0 30px;
-    }
+    
 }
 //Общая стилизация=============================================================
 .ibg{
@@ -141,6 +139,9 @@
     line-height: 130%;
     letter-spacing: 0.02em;
     color: #7872B9;
+    @media screen and (max-width:768px){
+        font-size: 30px;
+    }
     @media screen and (max-width:480px){
         font-size: 20px;
     }
